--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.0",
+    "history": "^5.0.0",
     "immutability-helper": "^3.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
